--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description"
+    content="Graphiste Web & Print / Developpeur Web & Mobile / redacteur Web / Monteur Video" />
+  <meta name="author"
+    content="Phil.T" />
+  <title>Phil.T : chargé de communication (Developpeur Web & Mobile / Graphiste Web & Print)</title>
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
